--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,7 @@ Description: RefTM is a R package for the integrative analysis of scCAS data.
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0.9000
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
